<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity" android:background="@color/colorPrimary">

    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="123dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="1.0" android:id="@+id/cardView"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:fadingEdge="none" app:cardBackgroundColor="#8a326b"
            app:cardCornerRadius="12dp" app:cardElevation="2dp"
            android:clickable="true"
            android:focusable="true"

            android:foreground="?android:attr/selectableItemBackground">
        <ImageView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_gravity="center|top"
                android:layout_margin="8dp"
                android:src="@drawable/camera" android:contentDescription="@string/camera_icon"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/camera_text"
                  android:layout_gravity="center|bottom" android:textAllCaps="true" android:freezesText="false"
                  android:textSize="16sp" android:textColor="@android:color/background_light"
                  android:layout_marginBottom="30dp"/>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="123dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/cardView"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:id="@+id/cardView2"
            app:cardBackgroundColor="#FF0A2260"
            app:cardCornerRadius="12dp" app:cardElevation="2dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">
        <ImageView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_gravity="center|top"
                android:layout_margin="8dp"
                android:src="@drawable/picture_folder" android:contentDescription="@string/gallery_icon"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/gallery_text"
                  android:layout_gravity="center|bottom" android:textAllCaps="true" android:freezesText="false"
                  android:textSize="16sp"
                  android:textColor="@android:color/background_light" android:layout_marginBottom="30dp"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="82dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cardView5"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" android:id="@+id/cardView4"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.052" android:layout_marginStart="8dp"
            app:cardBackgroundColor="@android:color/holo_red_light"
            app:cardCornerRadius="12dp" app:cardElevation="2dp"
            android:clickable="true"
            android:focusable="true"

            android:foreground="?android:attr/selectableItemBackground">

        <ImageView android:layout_width="60dp" android:layout_height="40dp"
                   android:layout_gravity="center|top"
                   android:src="@drawable/earth"
                   android:layout_marginTop="6dp"
                   android:contentDescription="@string/setting_icon"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/share_text"
                  android:textColor="@android:color/background_light"
                  android:layout_gravity="bottom|center"
                  android:layout_marginBottom="12dp"/>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="82dp"
            android:id="@+id/cardView5"
            app:layout_constraintStart_toEndOf="@+id/cardView4" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.25" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.052"
            app:cardBackgroundColor="@android:color/holo_orange_light"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp"
            android:clickable="true"
            android:focusable="true"

            android:foreground="?android:attr/selectableItemBackground">
        <ImageView android:layout_width="60dp" android:layout_height="40dp"
                   android:layout_gravity="center|top"
                   android:src="@drawable/search"
                   android:layout_marginTop="6dp"
                   android:contentDescription="@string/setting_icon"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/more_text"
                  android:textColor="@android:color/background_light"
                  android:layout_gravity="bottom|center"
                  android:layout_marginBottom="12dp"/>
    </android.support.v7.widget.CardView>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/bacfo"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/imageView" android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            android:contentDescription="@string/app_tile_img"
    />
</android.support.constraint.ConstraintLayout>